--- a/baseline/pom.xml
+++ b/baseline/pom.xml
@@ -8,7 +8,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>LangChain4j for Domino - Parent Settings</name>
+    <name>LangChain4j for Domino - Baseline Settings</name>
     <description>Common features, dependencies and configuration for LangChain4j Domino integration</description>
     <inceptionYear>2024</inceptionYear>
 
@@ -42,7 +42,7 @@
         <osgi.qualifier>${maven.build.timestamp}</osgi.qualifier>
 
         <!-- Main dependencies' versions -->
-        <langchain4j.version>0.36.2</langchain4j.version>
+        <langchain4j.version>1.0.0-alpha1</langchain4j.version>
         <domino-jnx.version>1.44.0</domino-jnx.version>
 
         <!-- Other libraries' versions -->
@@ -55,10 +55,22 @@
         <sun-jaxb-impl.version>3.0.0</sun-jaxb-impl.version>
         <angus-mail.version>2.0.3</angus-mail.version>
         <osgi-framework.version>1.8.0</osgi-framework.version>
+
+        <!-- Plugin versions -->
         <license-maven-plugin.version>4.6</license-maven-plugin.version>
         <openntf-p2-plugin.version>3.1.2</openntf-p2-plugin.version>
+        <p2sitexml-maven-plugin.version>1.3.0</p2sitexml-maven-plugin.version>
         <maven-enforcer.version>3.1.0</maven-enforcer.version>
-
+        <maven-clean-plugin.version>3.4.0</maven-clean-plugin.version>
+        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+        <maven-deploy-plugin.version>3.1.3</maven-deploy-plugin.version>
+        <maven-install-plugin.version>3.1.3</maven-install-plugin.version>
+        <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
+        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
+        <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
+        <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
+        <maven-dependency-plugin.version>3.1.0</maven-dependency-plugin.version>
+        <maven-bundle-plugin.version>6.0.0</maven-bundle-plugin.version>
     </properties>
 
     <!-- Some OpenNTF-based plugins and packages are coming from these repositories -->
@@ -167,12 +179,12 @@
                 <plugin>
 					<groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-clean-plugin</artifactId>
-                    <version>3.4.0</version>
+                    <version>${maven-clean-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.13.0</version>
+                    <version>${maven-compiler-plugin.version}</version>
                     <configuration>
                         <source>${maven.compiler.source}</source>
                         <target>${maven.compiler.target}</target>
@@ -181,22 +193,22 @@
                 <plugin>
 					<groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-deploy-plugin</artifactId>
-                    <version>3.1.3</version>
+                    <version>${maven-deploy-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-install-plugin</artifactId>
-                    <version>3.1.3</version>
+                    <version>${maven-install-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
-                    <version>3.3.1</version>
+                    <version>${maven-resources-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.5.2</version>
+                    <version>${maven-surefire-plugin.version}</version>
                     <configuration>
                         <skip>true</skip>
                         <trimStackTrace>false</trimStackTrace>
@@ -206,19 +218,19 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.4.2</version>
+                    <version>${maven-jar-plugin.version}</version>
                 </plugin>
 
                 <!-- Maven tools plugins -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-assembly-plugin</artifactId>
-                    <version>3.7.1</version>
+                    <version>${maven-assembly-plugin.version}</version>
                 </plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
-					<version>3.1.0</version>
+					<version>${maven-dependency-plugin.version}</version>
 				</plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -254,12 +266,12 @@
                 <plugin>
                     <groupId>org.darwino</groupId>
                     <artifactId>p2sitexml-maven-plugin</artifactId>
-                    <version>1.3.0</version>
+                    <version>${p2sitexml-maven-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
-                    <version>6.0.0</version>
+                    <version>${maven-bundle-plugin.version}</version>
                     <extensions>true</extensions>
                     <configuration>
                         <manifestLocation>META-INF</manifestLocation>
