--- a/release-dist/langchain4j-dist/pom.xml
+++ b/release-dist/langchain4j-dist/pom.xml
@@ -7,9 +7,9 @@
     <!-- Pull baseline settings from the parent. No need for aggregation -->
     <parent>
         <groupId>org.openntf.langchain4j-domino</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>baseline</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../../parent/pom.xml</relativePath>        
+        <relativePath>../../baseline/pom.xml</relativePath>
     </parent>
 
     <artifactId>updatesite-xsp</artifactId>
@@ -76,7 +76,7 @@
                 <configuration>
                     <appendAssemblyId>false</appendAssemblyId>
                     <descriptors>
-                        <descriptor>src/main/assembly/assembly.xml</descriptor>
+                        <descriptor>assembly.xml</descriptor>
                     </descriptors>
                     <finalName>domino-langchain4j-${project.version}</finalName>
                 </configuration>
