--- a/pom.xml
+++ b/pom.xml
@@ -40,21 +40,22 @@
         <!-- For XSP packaging -->
         <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
         <osgi.qualifier>${maven.build.timestamp}</osgi.qualifier>
+        <osgi-framework.version>1.8.0</osgi-framework.version>
 
         <!-- Main dependencies' versions -->
-        <langchain4j.version>1.0.0-beta1</langchain4j.version>
-        <domino-jnx.version>1.45.0</domino-jnx.version>
+        <langchain4j.version>1.0.0-beta3</langchain4j.version>
+        <domino-jnx.version>1.46.0</domino-jnx.version>
 
         <!-- Other libraries' versions -->
-        <jsoup.version>1.18.1</jsoup.version>
-        <commons-lang3.version>3.17.0</commons-lang3.version>
-        <commons-io.version>2.18.0</commons-io.version>
+        <jsoup.version>1.19.1</jsoup.version>
         <xsp-stubs.version>1.0.0</xsp-stubs.version>
+        <junit.version>5.10.2</junit.version>
+
+        <!-- Domino JNX / Java API dependencies -->
         <jakarta-mail.version>2.1.3</jakarta-mail.version>
         <sun-jakarta-acivation.version>2.0.1</sun-jakarta-acivation.version>
         <sun-jaxb-impl.version>3.0.0</sun-jaxb-impl.version>
         <angus-mail.version>2.0.3</angus-mail.version>
-        <osgi-framework.version>1.8.0</osgi-framework.version>
 
         <!-- Plugin versions -->
         <license-maven-plugin.version>4.6</license-maven-plugin.version>
@@ -149,16 +150,6 @@
                 <groupId>org.jsoup</groupId>
                 <artifactId>jsoup</artifactId>
                 <version>${jsoup.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-lang3</artifactId>
-                <version>${commons-lang3.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>commons-io</groupId>
-                <artifactId>commons-io</artifactId>
-                <version>${commons-io.version}</version>
             </dependency>
 
             <!-- JNX and XSP projects need these dependencies -->
