--- a/core-libs/langchain4j-domino/pom.xml
+++ b/core-libs/langchain4j-domino/pom.xml
@@ -50,19 +50,23 @@
             <artifactId>jsoup</artifactId>
         </dependency>
 
+        <!-- Testing -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>${junit.version}</version>
+            <artifactId>junit-jupiter-api</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-
+        <!-- Apache POI for document parsing test -->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-document-parser-apache-pdfbox</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
