--- a/pom.xml
+++ b/pom.xml
@@ -43,13 +43,13 @@
         <osgi-framework.version>1.8.0</osgi-framework.version>
 
         <!-- Main dependencies' versions -->
-        <langchain4j.version>1.0.0-beta3</langchain4j.version>
+        <langchain4j.version>1.0.0-rc1</langchain4j.version>
         <domino-jnx.version>1.46.0</domino-jnx.version>
 
         <!-- Other libraries' versions -->
         <jsoup.version>1.19.1</jsoup.version>
         <xsp-stubs.version>1.0.0</xsp-stubs.version>
-        <junit.version>5.10.2</junit.version>
+        <junit.version>5.12.2</junit.version>
 
         <!-- Domino JNX / Java API dependencies -->
         <jakarta-mail.version>2.1.3</jakarta-mail.version>
@@ -104,27 +104,10 @@
             <!-- Langchain4j -->
             <dependency>
                 <groupId>dev.langchain4j</groupId>
-                <artifactId>langchain4j</artifactId>
-                <version>${langchain4j.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>dev.langchain4j</groupId>
-                <artifactId>langchain4j-open-ai</artifactId>
-                <version>${langchain4j.version}</version>
-            </dependency>
-
-            <!-- Integrations -->
-            <dependency>
-                <groupId>dev.langchain4j</groupId>
-                <artifactId>langchain4j-ollama</artifactId>
-                <version>${langchain4j.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>dev.langchain4j</groupId>
-                <artifactId>langchain4j-chroma</artifactId>
-                <version>${langchain4j.version}</version>
+                <artifactId>langchain4j-bom</artifactId>
+                <version>1.0.0-beta4</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
             <!-- Domino JNX -->
@@ -167,6 +150,15 @@
                 <groupId>org.osgi</groupId>
                 <artifactId>org.osgi.framework</artifactId>
                 <version>${osgi-framework.version}</version>
+            </dependency>
+
+            <!-- Testing -->
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>5.12.2</version>
+                <type>pom</type>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
