--- a/extension-plugins/org.openntf.langchain4j.xsp/pom.xml
+++ b/extension-plugins/org.openntf.langchain4j.xsp/pom.xml
@@ -56,6 +56,14 @@
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-ollama</artifactId>
         </dependency>
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-document-parser-apache-poi</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-document-parser-apache-pdfbox</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
